<resources>
    <string name="app_name" translatable="false">Buddhism</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome1">Hello!\nThis application was designed with the express intent of giving the answers to three distinct questions regarding Buddhism assigned to me (and the rest of my class) by Helena Sontag.</string>
    <string name="welcome2">To begin, swipe from the left of your screen or tap the marked icon to open the navigation bar. Simply click on the answer you would like to view from the navigation bar to navigate to the corresponding answer.</string>
    <string name="signoff">Sincerely, Gabriel Tofvesson</string>
    <string name="got_it">GOT IT</string>
    <string name="question1">Reflect upon the apsects of both Buddhism and Hiduism and make a comparison between them. What are their similarities and what are their differences?</string>
    <string name="question2">How does one achieve Nirvana according to Buddhism? Do these beliefs vary based on which subset of Buddhism one believes in?</string>
    <string name="question3">According to Buddha, peoples thirst for life makes life torturous. What does he mean by that and what, in that case, is true joy?</string>
    <string name="answer1">Buddhism was founded roughly around the year 500 BCE in what is now called Nepal. The religion is said to be founded by Gautama Buddha. The religion proposes many ideologies on how a person should live their life such as Karma and Nirvana. Karma is in this case a sum of all of the things that you have done, said or in some form taken part in, while Nirvana is an abstract state wherein the user is freed from their humanity; they reach a higher state of mind allowing them to escape the use of things such as egoism or a thirst for life. Nirvana means “blown out” like a candle but could also mean “extinguished” as it is determined to be a state where a human isn’t reborn in the enlightened person’s stead. As with Buddhism, Hinduism offers some similar aspects in its religion. Some examples of these are – once again – Karma as well as Moksha which have a similar and corresponding functions to the earlier ones described i.e. Karma is a sum of all the events you have taken part in and Moksha is a state of having escaped the pseudo-infinite re-birth cycle by the name of Samsara. Hinduism was created (very) roughly around 1900 BCE and considering its geographic proximity to India, it is not unlikely that some of the influences of Buddhism in its early stages came from Hinduism, whose origins are pinpointed to the general Indian region. This also means that ancient tribes from the Himalayas migrating to India in circa 2000 BCE also could have brought the earliest versions of pre-Buddhism that could have influenced the creation of Hinduism which later in-turn influenced Buddhism. On one hand, these religions seem so intertwined both historically and geographically that they might be confused for being the same religion with slightly different names, but on the other hand the way the two religions perceive the state of enlightenment (Moksha/Nirvana) is very different. Hinduism sees Moksha as a very personal event; it sees Moksha an individual being freed from its earthly shackles to go return to - and become a part of - Brahman (the principle that exists in the world). As opposed to the Hindu view of an individual accomplishing this feat, Buddhism proposes that a truly enlightened person understands that there is no true concept of “me” and see Nirvana as a state in which an enlightened person is allowed to escape the otherwise infinite loop of re-birth. In this way, one can see that Hinduism focuses on the actions and events that an individual part-takes in, while Buddhism aims to inform its followers that there is no such concept of and individual. At the same time, this mean that the differences between these two religions could be seen as two sides of the same coin, as they both speak of an idea of not being individuals in some way: Hinduisms ideas of Brahman and Atman and Buddhism’s ideas of no one being an individual.</string>
    <string name="answer2">In both the Theravada and Mahayana subsets of the religion, Nirvana is considered to be an abstract state of being where judgement can’t be made and “one” is truly enlightened. Both subsets speak of steps that one takes to achieve such a state which on one hand makes them similar, though on the other hand the different subsets speak very differently about how one reaches Nirvana despite the similar names. For example: The Mahayana subset explains that one must follow the five paths that lead through ten steps to enlightenment and that one by the end will have reached Nirvana. It is also definitely worth mentioning that the Mahayana subset doesn’t consider Nirvana to be a final destination, but rather a conduit allowing an enlightened to return to earth to free other creatures. As opposed to Mahayana, Theravada explains that one must follow four steps to become arhat (enlightened) which implies that the follower has been freed from the ten fetters (shackles of humanity). This means that Theravada considers Nirvana to be a final destination, a resting place after a hard life, while Mahayana sees Nirvana as a pathway for the enlightened to follow to help others reach it.</string>
    <string name="answer3">On one hand, thirst for life could mean that a person doesn’t want to die and perpetually attempt to avoid it at all costs. On the other hand, it could refer to someone who doesn’t want to be enlightened and therefore willingly continues being re-born. Either way, they both follow a path of fear and/or general non-enlightenment and keep it that way, meaning that they could never reach Nirvana. As Nirvana is an almost direct opposite to life, as it implies no re-birth and no Karma, it could be argued that Nirvana is what Buddha meant by “true joy”. It is, though, this juxtaposition between Nirvana and life delimited by a thin line that is death that may deter certain individuals from attaining such a state of mind such that they would reach Nirvana. This could mean that Nirvana is both the cause and solution to the fact that life is suffering, as it is the sole reason for why some individuals want to continue living.</string>
    <string name="swipe">Swipe from the left of your screen</string>
    <string name="sttr">Swipe to the right</string>
    <string name="lang">If you are so inclined, you may select another language</string>
    <string name="lang_en">English</string>
    <string name="lang_sv">Swedish</string>
    <string name="welcome">Welcome</string>
    <string name="introduction">Introduction</string>
    <string name="label_q1">Question 1</string>
    <string name="label_q2">Question 2</string>
    <string name="label_q3">Question 3</string>
    <string name="label_home">Home</string>
</resources>
