<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/swipe"
        android:id="@+id/swipe"/>
    <ImageView
        android:id="@+id/arrow"
        android:layout_margin="10sp"
        android:layout_below="@id/swipe"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sttr"
        android:src="@drawable/swipe_arrow"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>
    <TextView
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arrow"
        android:layout_marginTop="10sp"
        android:textSize="22sp"
        android:text="@string/lang"/>
    <TextView
        android:id="@+id/lang_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lang"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp"
        android:padding="5sp"
        android:background="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:text="@string/lang_en"/>
    <TextView
        android:id="@+id/lang_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lang_en"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp"
        android:padding="5sp"
        android:background="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:text="@string/lang_sv"/>
</RelativeLayout>